content/_generated-doc/2.16/config/quarkus-transaction-manager-transaction-manager-configuration.adoc

:summaryTableId: quarkus-transaction-manager-transaction-manager-configuration
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-transaction-manager-transaction-manager-configuration_configuration]]link:#quarkus-transaction-manager-transaction-manager-configuration_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.node-name]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.node-name[quarkus.transaction-manager.node-name]`

[.description]
--
The node name used by the transaction manager

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_NODE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_NODE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`quarkus`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.default-transaction-timeout]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.default-transaction-timeout[quarkus.transaction-manager.default-transaction-timeout]`

[.description]
--
The default transaction timeout

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_DEFAULT_TRANSACTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_DEFAULT_TRANSACTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store-directory]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store-directory[quarkus.transaction-manager.object-store-directory]`

[.description]
--
The directory name of location of the transaction logs. If the value is not absolute then the directory is relative to the _user.dir_ system property.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`ObjectStore`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.enable-recovery]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.enable-recovery[quarkus.transaction-manager.enable-recovery]`

[.description]
--
Start the recovery service on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_ENABLE_RECOVERY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_ENABLE_RECOVERY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.recovery-modules]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.recovery-modules[quarkus.transaction-manager.recovery-modules]`

[.description]
--
The list of recovery modules

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_RECOVERY_MODULES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_RECOVERY_MODULES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`com.arjuna.ats.internal.arjuna.recovery.AtomicActionRecoveryModule,com.arjuna.ats.internal.jta.recovery.arjunacore.XARecoveryModule`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.expiry-scanners]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.expiry-scanners[quarkus.transaction-manager.expiry-scanners]`

[.description]
--
The list of expiry scanners

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_EXPIRY_SCANNERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_EXPIRY_SCANNERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`com.arjuna.ats.internal.arjuna.recovery.ExpiredTransactionStatusManagerScanner`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.xa-resource-orphan-filters]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.xa-resource-orphan-filters[quarkus.transaction-manager.xa-resource-orphan-filters]`

[.description]
--
The list of orphan filters

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_XA_RESOURCE_ORPHAN_FILTERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_XA_RESOURCE_ORPHAN_FILTERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`com.arjuna.ats.internal.jta.recovery.arjunacore.JTATransactionLogXAResourceOrphanFilter,com.arjuna.ats.internal.jta.recovery.arjunacore.JTANodeNameXAResourceOrphanFilter,com.arjuna.ats.internal.jta.recovery.arjunacore.JTAActionStatusServiceXAResourceOrphanFilter`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
